--- a/css/css/styles.css
+++ b/css/css/styles.css
@@ -69,5 +69,82 @@
     margin: 0 2rem; }
     .step-main .step-main {
       margin: 0; } }
+.gal-home {
+  position: relative;
+  letter-spacing: 1pt;
+  overflow: hidden;
+  border: 4px solid rgba(0, 0, 0, 0); }
+  .gal-home:hover img {
+    width: 100%;
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
+    -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
+    filter: grayscale(0%); }
+  .gal-home img {
+    width: 100%;
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+    -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
+    height: 200px;
+    object-fit: cover;
+    filter: grayscale(100%); }
+  .gal-home .hovereffect {
+    width: 100%;
+    height: auto;
+    float: left;
+    position: relative;
+    text-align: center;
+    cursor: pointer; }
+    .gal-home .hovereffect:hover .overlay {
+      bottom: -2.5%;
+      left: 0;
+      opacity: 1; }
+      .gal-home .hovereffect:hover .overlay .devider {
+        display: block;
+        margin: 10px auto;
+        width: 138px;
+        border-top: 1px solid #FB2626;
+        -webkit-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out; }
+    .gal-home .hovereffect .overlay {
+      width: 90%;
+      height: 90%;
+      position: absolute;
+      color: #fff;
+      background-color: rgba(0, 0, 0, 0.5);
+      margin: 5%;
+      bottom: -2.5%;
+      left: 0;
+      opacity: 1;
+      -webkit-transition: all 0.3s ease-in-out;
+      transition: all 0.3s ease-in-out; }
+      @media (min-width: 768px) {
+        .gal-home .hovereffect .overlay {
+          background-color: rgba(0, 0, 0, 0.8);
+          bottom: 0;
+          left: 0;
+          opacity: 0; } }
+      .gal-home .hovereffect .overlay h3 {
+        font-size: 11pt !important;
+        font-weight: 500 !important;
+        letter-spacing: 1px;
+        padding: 25% 0 0 0; }
+      .gal-home .hovereffect .overlay p {
+        font-size: 9pt !important;
+        font-weight: 300;
+        line-height: 12pt;
+        letter-spacing: 1px;
+        margin: 0 auto !important; }
+      .gal-home .hovereffect .overlay .devider {
+        display: block;
+        margin: 10px auto;
+        width: 188px;
+        border-top: 1px solid #FB2626;
+        -webkit-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out; }
 
 /*# sourceMappingURL=styles.css.map */
